# GazeEstimation

./: .clang-format  .gitmodules  .travis.yml  CMakeLists.txt  README.md  opencv.cmake
demo/: main.cpp
include/: BasicTypes.h  CascadeClassifier.h  DataDrawer.h  DataWriter.h  EyePointDetector.h  FaceFinder.h  RoiDetector.h  Scene.h  Workflow.h
src/: CascadeClassifier.cpp  DataDrawer.cpp  DataWriter.cpp  EyePointDetector.cpp  FaceFinder.cpp  FaceFinder.cpp.autosave  RoiDetector.cpp  Workflow.cpp
